AM_LDFLAGS=-lexodus -L../../exodus/exodus/exodus/.libs
#AM_CXXFLAGS=-I../../exodus/exodus
AM_CPPFLAGS=-I../../exodus/exodus -Wall -Wextra -ansi -Wno-unused-parameter

bin_PROGRAMS=compile createfile createindex delete deletefile deleteindex edir edic exodus \
list listfiles listindexes testsort configexodus

compile_SOURCES=compile.cpp
createfile_SOURCES=createfile.cpp
createindex_SOURCES=createindex.cpp
delete_SOURCES=delete.cpp
deletefile_SOURCES=deletefile.cpp
deleteindex_SOURCES=deleteindex.cpp
edir_SOURCES=edir.cpp
edic_SOURCES=edic.cpp
exodus_SOURCES=exodus.cpp
list_SOURCES=list.cpp printtext.h
listfiles_SOURCES=listfiles.cpp
listindexes_SOURCES=listindexes.cpp
testsort_SOURCES=testsort.cpp
configexodus_SOURCES=configexodus.cpp
